--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loggio",
   "version": "0.2.0",
-  "description": "Lite logger for NodeJS",
+  "description": "A super-light logger with colors for NodeJS.",
   "main": "index.js",
   "repository": {
     "type": "git",
